Terminar en clase

--- a/pryPereiroSP3/pryPereiroSP3.csproj
+++ b/pryPereiroSP3/pryPereiroSP3.csproj
@@ -6,6 +6,11 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ApplicationIcon>car_repair_auto_service_icon_152274.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="car_repair_auto_service_icon_152274.ico" />
+  </ItemGroup>
 
 </Project>
