--- a/pryPereiroSP3/pryPereiroSP3.csproj
+++ b/pryPereiroSP3/pryPereiroSP3.csproj
@@ -6,11 +6,11 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
-    <ApplicationIcon>car_repair_auto_service_icon_152274.ico</ApplicationIcon>
+    <ApplicationIcon>car_repair_auto_service_icon_152274 (1).ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="car_repair_auto_service_icon_152274.ico" />
+    <Content Include="car_repair_auto_service_icon_152274 (1).ico" />
   </ItemGroup>
 
 </Project>
